Closed Bug 1280099 Opened 8 years ago Closed 6 years ago

Intermittent test_peerConnection_trackDisabling.html | Test timed out.

Categories

(Core :: WebRTC: Audio/Video, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla60
Tracking Status
firefox60 --- fixed

People

(Reporter: aryx, Assigned: pehrsons)

References

Details

(Keywords: intermittent-failure)

Attachments

(1 file)

https://treeherder.mozilla.org/logviewer.html#?job_id=30128179&repo=mozilla-inbound

09:57:03     INFO -  215 INFO TEST-PASS | dom/media/tests/mochitest/test_peerConnection_trackDisabling.html | pcLocal: SDP contains non-zero IP c line
09:57:03     INFO -  216 INFO TEST-PASS | dom/media/tests/mochitest/test_peerConnection_trackDisabling.html | pcLocal: SDP contains rtcp-mux
09:57:03     INFO -  217 INFO Run step 54: PC_REMOTE_VERIFY_SDP_AFTER_END_OF_TRICKLE
09:57:03     INFO -  218 INFO Run step 55: CHECK_ASSUMPTIONS
09:57:03     INFO -  219 INFO TEST-PASS | dom/media/tests/mochitest/test_peerConnection_trackDisabling.html | pcLocal should have one media element
09:57:03     INFO -  220 INFO TEST-PASS | dom/media/tests/mochitest/test_peerConnection_trackDisabling.html | pcRemote should have one media element
09:57:03     INFO -  221 INFO TEST-PASS | dom/media/tests/mochitest/test_peerConnection_trackDisabling.html | pcLocal should have one stream
09:57:03     INFO -  222 INFO TEST-PASS | dom/media/tests/mochitest/test_peerConnection_trackDisabling.html | pcRemote should have one stream
09:57:03     INFO -  223 INFO Run step 56: CHECK_VIDEO
09:57:03     INFO -  224 INFO Checking local video enabled
09:57:03     INFO -  225 INFO Checking remote video enabled
09:57:03     INFO -  226 INFO Disabling original
09:57:03     INFO -  227 INFO Checking local video disabled
09:57:03     INFO -  228 INFO Checking remote video disabled
09:57:03     INFO -  229 INFO Run step 57: CHECK_AUDIO
09:57:03     INFO -  230 INFO Checking local audio enabled
09:57:03     INFO -  231 INFO Checking remote audio enabled
09:57:03     INFO -  232 INFO Checking local audio disabled
09:57:03     INFO -  233 INFO Checking remote audio disabled
09:57:03     INFO -  234 INFO TEST-UNEXPECTED-FAIL | dom/media/tests/mochitest/test_peerConnection_trackDisabling.html | Test timed out.
09:57:03     INFO -      reportError@SimpleTest/TestRunner.js:114:7
09:57:03     INFO -      TestRunner._checkForHangs@SimpleTest/TestRunner.js:135:7
09:57:03     INFO -  235 INFO Closing peer connections
Rank: 35
Priority: -- → P3
Mass change P3->P4 to align with new Mozilla triage process.
Priority: P3 → P4
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → WORKSFORME
I've triggered this aplenty with my patches for bug 1436074.

Looks like bug 1280445 changed MediaEngineDefaultVideoSource to set mImage to nullptr on Stop(), and with the recent change in bug 1299515 to Stop() devices on track disabling we started appending nullptr images with size 0x0. The 0x0 caused us to not render the image at all when it should in fact have been black at the old resolution.
Assignee: nobody → apehrson
Status: REOPENED → ASSIGNED
Rank: 35 → 15
Component: WebRTC → WebRTC: Audio/Video
Priority: P4 → P2
Note that this is not the same symptom as this bug was originally filed for, but likely the issue since the reopening in comment 6.
Comment on attachment 8956525 [details]
Bug 1280099 - Retain image size after stopping MediaEngineDefaultVideoSource.

https://reviewboard.mozilla.org/r/225434/#review231362

Lgtm.
Attachment #8956525 - Flags: review?(jib) → review+
Pushed by pehrsons@gmail.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/42c6ec43f782
Retain image size after stopping MediaEngineDefaultVideoSource. r=jib
See Also: → 1443585
https://hg.mozilla.org/mozilla-central/rev/42c6ec43f782
Status: ASSIGNED → RESOLVED
Closed: 6 years ago6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla60
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: