Bug 1280099 - Retain image size after stopping MediaEngineDefaultVideoSource. r=jib

MozReview-Commit-ID: Kacol64Jo0F